Updated styles to prevent overlapping columns for smaller screen widths

--- a/src/main/webapp/styles/helpers.less
+++ b/src/main/webapp/styles/helpers.less
@@ -27,11 +27,11 @@
 	filter: ~'alpha(opacity=@{ieValue})';
 }
 
-.flex(@value) {
-	-webkit-flex: @value;
-	-moz-flex: @value;
-	-ms-flex: @value;
-	flex: @value;
+.flex(...) {
+	-webkit-flex: ~"@{arguments}";
+	-moz-flex: ~"@{arguments}";
+	-ms-flex: ~"@{arguments}";
+	flex: ~"@{arguments}";
 }
 
 .linear-gradient(...){
